--- a/TKV2025_soubory/sheet010.htm
+++ b/TKV2025_soubory/sheet010.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11708 style='border-collapse:
- collapse;table-layout:fixed;width:8793pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11805 style='border-collapse:
+ collapse;table-layout:fixed;width:8866pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
@@ -206,8 +205,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -367,7 +366,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1085,7 +1084,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>20</td>
+  <td class=xl165 style='border-left:none'>21</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1219,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>7,9</td>
+  <td class=xl148 style='border-top:none;border-left:none'>7,8</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,7 +1354,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>17</td>
+  <td class=xl165 style='border-top:none;border-left:none'>18</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1575,8 +1574,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
   [CZE069712]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>12600</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>27</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>13250</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,8 +1799,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>24</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>26</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>12100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2023,8 +2022,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>29</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10650</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>31</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>11450</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,8 +2157,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2505,8 +2504,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8700</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9500</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2631,9 +2630,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2676,14 +2677,14 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>20</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6800</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>22</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7600</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Lacina Tomáš [CZE059603]</td>
+  <td class=xl82 style='border-top:none'>Šmíd Michal [CZE064383]</td>
   <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2804,9 +2805,11 @@ else
   [CZE069712]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2975,9 +2978,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3149,9 +3154,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3321,9 +3328,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3490,9 +3499,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Růžička Martin
+  [CZE069712]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3653,9 +3665,12 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Sibera Čestmír
+  [CZE083717]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4959,7 +4974,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>23</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Sibera Češtmír
+  <td class=xl70 style='border:.5pt solid windowtext'>Sibera Čestmír
   [CZE083717]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>2</td>
   <td class=xl70 style='border:.5pt solid windowtext'>600</td>
@@ -5092,10 +5107,13 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>24</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Sibera Češtmír
+  [CZE083717]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14496,7 +14514,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
