--- a/TKV2025_soubory/sheet011.htm
+++ b/TKV2025_soubory/sheet011.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10992 style='border-collapse:
- collapse;table-layout:fixed;width:8263pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11088 style='border-collapse:
+ collapse;table-layout:fixed;width:8335pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=196 style='mso-width-source:userset;mso-width-alt:7168;
@@ -206,8 +205,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=176 style='mso-width-source:userset;mso-width-alt:6436;
+ width:132pt'>
  <col class=xl70 width=105 style='mso-width-source:userset;mso-width-alt:3840;
  width:79pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -367,7 +366,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=176 style='width:132pt'></td>
   <td class=xl70 width=105 style='width:79pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1085,7 +1084,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl170 align=right style='border-left:none'>20</td>
+  <td class=xl170 align=right style='border-left:none'>21</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1219,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl172 align=right style='border-top:none;border-left:none'>7,8</td>
+  <td class=xl172 align=right style='border-top:none;border-left:none'>7,7</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1355,7 +1354,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl170 align=right style='border-top:none;border-left:none'>17</td>
+  <td class=xl170 align=right style='border-top:none;border-left:none'>18</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1799,9 +1798,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5650</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2022,9 +2021,9 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5350</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2158,8 +2157,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4450</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4800</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2505,8 +2504,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4750</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2631,9 +2630,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Šmíd Michal [CZE064383]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2676,14 +2677,14 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3600</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4150</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl82 style='border-top:none'>Lacina Tomáš [CZE059603]</td>
   <td class=xl82 style='border-top:none;border-left:none'>1</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2804,9 +2805,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Škareda Matěj [CZE069713]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2977,9 +2980,11 @@ else
   [CZE069712]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3149,9 +3154,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hladký Pavel [CZE071237]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3319,9 +3326,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Březina Lukáš [CZE057909]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sibera Čestmír
+  [CZE083717]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3488,9 +3498,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Močuba Jiří [CZE062045]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4957,7 +4969,7 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>23</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Sibera Češtmír
+  <td class=xl65 style='border:.5pt solid windowtext'>Sibera Čestmír
   [CZE083717]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>250</td>
@@ -5090,10 +5102,13 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl78 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
+  font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
+  none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>24</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Sibera Češtmír
+  [CZE083717]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14893,7 +14908,7 @@ else
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=176 style='width:132pt'></td>
   <td width=105 style='width:79pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
