--- a/TKV2025_soubory/sheet021.htm
+++ b/TKV2025_soubory/sheet021.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1087,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>20</td>
+  <td class=xl165 style='border-left:none'>21</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1219,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>299
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>283
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1358,7 +1357,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8150</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>274
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>259
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1587,7 +1586,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5950</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>200
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>189
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1815,7 +1814,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5950</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>200
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>189
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -2044,7 +2043,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>190
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>179
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2182,7 +2181,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>4500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>151
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>143
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
