--- a/TKV2025_soubory/sheet025.htm
+++ b/TKV2025_soubory/sheet025.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12322 style='border-collapse:
- collapse;table-layout:fixed;width:9256pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12447 style='border-collapse:
+ collapse;table-layout:fixed;width:9350pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -207,8 +206,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
+ width:154pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -368,7 +367,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=205 style='width:154pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1086,7 +1085,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>20</td>
+  <td class=xl165 style='border-left:none'>21</td>
   <td class=xl70></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1216,13 +1215,13 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
   [CZE071305]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>36</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>19900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>38</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>21200</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>11,8</td>
+  <td class=xl148 style='border-top:none;border-left:none'>11,5</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1357,7 +1356,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>18</td>
+  <td class=xl165 style='border-top:none;border-left:none'>19</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1577,8 +1576,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
   [CZE063138]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1801,10 +1800,10 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čechová Kateřina
-  [CZE064386]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9600</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10500</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2025,8 +2024,8 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
-  [CZE059373]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čechová Kateřina
+  [CZE064386]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>16</td>
   <td class=xl65 style='border:.5pt solid windowtext'>9600</td>
   <td class=xl104></td>
@@ -2647,9 +2646,12 @@ else
   [CZE059905]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2701,7 +2703,7 @@ else
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl82 style='border-top:none'>Smejkal František [CZE071305]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  <td class=xl82 style='border-top:none;border-left:none'>5</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2829,9 +2831,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2873,10 +2877,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kopeček Ondřej
-  [CZE059905]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3013,9 +3016,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3057,9 +3063,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6900</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3197,9 +3203,12 @@ else
   [CZE071065]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3241,9 +3250,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>20</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3376,9 +3386,11 @@ else
   [CZE071305]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3420,9 +3432,10 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kopeček Ondřej
+  [CZE059905]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6500</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3556,9 +3569,12 @@ else
   [CZE058361]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>500</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3600,10 +3616,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Markovičová Lenka
-  [CZE072576]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14822,7 +14837,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=205 style='width:154pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
