--- a/TKV2025_soubory/sheet027.htm
+++ b/TKV2025_soubory/sheet027.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -46,8 +45,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=11909 style='border-collapse:
- collapse;table-layout:fixed;width:8953pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=12034 style='border-collapse:
+ collapse;table-layout:fixed;width:9047pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=230 style='mso-width-source:userset;mso-width-alt:8411;
@@ -209,8 +208,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
+ width:154pt'>
  <col class=xl70 width=113 style='mso-width-source:userset;mso-width-alt:4132;
  width:85pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -370,7 +369,7 @@ else
   <td class=xl70 width=113 style='width:85pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=205 style='width:154pt'></td>
   <td class=xl70 width=113 style='width:85pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1088,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>20</td>
+  <td class=xl165 style='border-left:none'>21</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1218,16 +1217,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Smejkal František
   [CZE071305]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>18</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>10800</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>19</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>11450</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>534
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>550
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>11,8</td>
+  <td class=xl148 style='border-top:none;border-left:none'>11,5</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1360,12 +1359,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>7300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>361
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>351
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>18</td>
+  <td class=xl165 style='border-top:none;border-left:none'>19</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1585,11 +1584,11 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Vierer Jaromír
   [CZE059373]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5750</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>257
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>276
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1814,16 +1813,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Babický Michal
   [CZE063138]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5000</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5250</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>247
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>252
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
   <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
-  none'>2 968 Kč</td>
+  none'>3 052 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2047,7 +2046,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>4600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>227
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>221
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2186,7 +2185,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>4550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>225
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>219
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2666,9 +2665,12 @@ else
   [CZE071065]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>950</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Smejkal František
+  [CZE071305]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2710,15 +2712,15 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3850</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3950</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl82 style='border-top:none'>Smejkal František [CZE071305]</td>
   <td class=xl145 style='border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2848,9 +2850,12 @@ else
   [CZE059905]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Vierer Jaromír
+  [CZE059373]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2892,16 +2897,16 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3500</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Bednář Martin [CZE005253]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3850</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Smejkal František [CZE071305]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>3</td>
+  <td class=xl82 style='border-top:none'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -3031,9 +3036,11 @@ else
   [CZE071305]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3214,9 +3221,11 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3395,9 +3404,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Markovičová Lenka
+  [CZE072576]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3439,9 +3451,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Truhlář Jan [CZE078877]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3200</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3400</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3576,9 +3588,12 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>Mucha Jiří [CZE080692]</td>
   <td class=xl70 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3620,9 +3635,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>Hyský Jan [CZE064304]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>7</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>3050</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>Truhlář Jan [CZE078877]</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3200</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3800,8 +3815,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>14</td>
   <td class=xl70 style='border:.5pt solid windowtext'>Markovičová Lenka
   [CZE072576]</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl70 style='border:.5pt solid windowtext'>2850</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>10</td>
+  <td class=xl70 style='border:.5pt solid windowtext'>3100</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15242,7 +15257,7 @@ else
   <td width=113 style='width:85pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=205 style='width:154pt'></td>
   <td width=113 style='width:85pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
